Added Chicken recipe page

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,5 +6,23 @@
     </head>
     <body>
         <h1>Breaded Air Fryer Chicken</h1>
+        <img src = "../images/chickenpic.jpg"alt ="Breaded, cripsy, tasty chicken!">
+        <h2>Description</h2>
+        <p>Delicious chicken floured and fried in the air fryer!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Large Chicken Breast</li>
+            <li>Tablespoon of oil</li>
+            <li>1/2 cup bread crumbs (or other method of breading)</li>
+            <li>1 Teaspoon of your combined seasonings</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Place chicken breasts in bowl and drizzle with oil</li>
+            <li>Mix breadcrumbs with seasoning in a seperate dish</li>
+            <li>Coat chicken breasts in bread crumbs dish</li>
+            <li>Air fry in the air fryer at 390 degrees Farenheit for 10-12 minutes</li>
+            <li>After 7 minutes, open the air fryer and flip the chicken</li>
+        </ol>
     </body>
 </html>
