--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes </h1>
-        <a href = "recipes/chicken.html">Breaded Air Fryer Chicken</a>
+        <ul>
+            <li><a href = "recipes/chicken.html">Breaded Air Fryer Chicken</a></li>
+            <li><a href = "recipes/kalbi.html">Kalbi Short Ribs</a></li>
+            <li><a href = "recipes/cucumbersalad.html">Soy Sauce Cucumber Salad</a></li>
+        </ul>
+        
     </body>
 </html>
